tests/error/override_confict.gw
// [contains] conflicts with previously defined value
class C
{
	int test;
}

class D extends C
{
	function void test() {}
}

C c;
D d;
<<<c>>>;
<<<d>>>;